# pure_pynacl

./: .gitignore  NOTES.md  README.md  pyproject.toml  tox.ini
pure_pynacl/: __init__.py  tweetnacl.py
test/: __init__.py  bit_ops.c  bit_ops.py  compare.py  performance.py
tests/: __init__.py  bit_ops.py  ref_test.py
tweetnacl/: TweetNaCl.c
